force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/clofor_com_cfs__WorkOrderService__c.object-meta.xml
<CustomObject>
    <label>W/O/S</label>
    <nameField>
        <displayFormat>WOS-{000000}</displayFormat>
        <label>WORK ORDER SERVICE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>W/O/S</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>