force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__ActualEndTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActualEndTime__c</fullName>
    <label>ACTUAL END TIME</label>
    <type>DateTime</type>
</CustomField>