force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__ActualTimeSpent__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActualTimeSpent__c</fullName>
    <formula>(clofor_com_cfs__ActualEndTime__c - clofor_com_cfs__ActualStartTime__c) * 24</formula>
    <label>ACTUAL TIME SPENT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>