force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__Carrier__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CARRIER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>WORK ORDER SERVICE</relationshipLabel>
    <relationshipName>WorkOrderService</relationshipName>
    <type>Lookup</type>
</CustomField>