force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__CreateWMSBill__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CreateWMSBill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Create WMS Bill</label>
    <type>Checkbox</type>
</CustomField>