force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__DamagedQuantityRollUp__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DamagedQuantityRollUp__c</fullName>
    <label>DamagedQuantityRollUp</label>
    <summaryFilterItems>
        <field>clofor_com_cfs__WOSLineItem__c.clofor_com_cfs__CargoStatus__c</field>
        <operation>equals</operation>
        <value>Damaged</value>
    </summaryFilterItems>
    <summaryForeignKey>clofor_com_cfs__WOSLineItem__c.clofor_com_cfs__WorkOrderService__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>