force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__DeliveryPlanQuantity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DeliveryPlanQuantity__c</fullName>
    <label>Delivery Plan Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>