force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__DeliveryReturnedQuantity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DeliveryReturnedQuantity__c</fullName>
    <label>Delivery Returned Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>