force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__DeliveryServiceType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DeliveryServiceType__c</fullName>
    <label>Delivery Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__DeliveryServiceType</valueSetName>
    </valueSet>
</CustomField>