force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__DeliveryVarianceQuantity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DeliveryVarianceQuantity__c</fullName>
    <formula>clofor_com_cfs__DeliveryFinalQuantity__c -  clofor_com_cfs__DeliveryInitialQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Variance Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>