force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__DestinationLocator__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DestinationLocator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DESTINATION LOCATOR</label>
    <referenceTo>clofor_com_cfs__LOCATOR__c</referenceTo>
    <relationshipLabel>WORK ORDER SERVICE-DESTINATION</relationshipLabel>
    <relationshipName>WorkOrderServiceDestination</relationshipName>
    <type>Lookup</type>
</CustomField>