force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__DestinationWarehouseAddress__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DestinationWarehouseAddress__c</fullName>
    <formula>clofor_com_cfs__DestinationWarehouse__r.clofor_com_cfs__Address__c</formula>
    <label>DESTINATION WAREHOUSE ADDRESS</label>
    <type>Text</type>
</CustomField>