force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__IsRestricted__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__IsRestricted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For picking service, enable this option will restrict the picking activities to planned and linked cargoes only.</inlineHelpText>
    <label>Is restricted</label>
    <type>Checkbox</type>
</CustomField>