force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__JobDescription__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__JobDescription__c</fullName>
    <label>JOB DESCRIPTION</label>
    <type>TextArea</type>
</CustomField>