force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__LastMileDriver__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LastMileDriver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Mile Driver</label>
    <referenceTo>clofor_com_cfs__WORKER__c</referenceTo>
    <relationshipLabel>W/O/S(OUTBOUND DISPATCH)</relationshipLabel>
    <relationshipName>WOSLastMileDriver</relationshipName>
    <type>Lookup</type>
</CustomField>