force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__LastMilePackageDescription__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LastMilePackageDescription__c</fullName>
    <label>Last Mile Package Description</label>
    <type>TextArea</type>
</CustomField>