force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__LastMileTruckBike__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LastMileTruckBike__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Mile Truck/Bike</label>
    <referenceTo>clofor_com_cfs__TruckFleet__c</referenceTo>
    <relationshipLabel>W/O/S(OUTBOUND DISPATCH)</relationshipLabel>
    <relationshipName>WOSLastMileTruckBike</relationshipName>
    <type>Lookup</type>
</CustomField>