force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__Measurement__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Measurement__c</fullName>
    <label>MEASUREMENT(CBM)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>