force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__MissingDamageReport__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MissingDamageReport__c</fullName>
    <label>MISSING/DAMAGE REPORT</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>