force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__NextWos__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NextWos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NEXT WORK ORDER SERVICE ID</label>
    <referenceTo>clofor_com_cfs__WorkOrderService__c</referenceTo>
    <relationshipLabel>PREVIOUS WORK ORDER SERVICE</relationshipLabel>
    <relationshipName>NextWorkOrderService</relationshipName>
    <type>Lookup</type>
</CustomField>