force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__Order__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Order__c</fullName>
    <description>Service order in the process</description>
    <inlineHelpText>Service order in the process</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>