force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__ParentWOSID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ParentWOSID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARENT W/O/S ID</label>
    <referenceTo>clofor_com_cfs__WorkOrderService__c</referenceTo>
    <relationshipLabel>CHILD W/O/S ID</relationshipLabel>
    <relationshipName>ParentWOSID</relationshipName>
    <type>Lookup</type>
</CustomField>