force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__PlannedQuantity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PlannedQuantity__c</fullName>
    <label>PLAN QUANTITY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>