force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__ProcessingOutcomeImage__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProcessingOutcomeImage__c</fullName>
    <label>PROCESSING OUTCOME IMAGE</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>