force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__RequestedDeliveryDateTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RequestedDeliveryDateTime__c</fullName>
    <label>Requested Delivery Date/Time</label>
    <type>DateTime</type>
</CustomField>