force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__ReturnMethods__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReturnMethods__c</fullName>
    <label>Return Methods</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ReturnMethods</valueSetName>
    </valueSet>
</CustomField>