force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__ReturnWarehouseID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReturnWarehouseID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return Warehouse ID</label>
    <referenceTo>clofor_com_cfs__Facility__c</referenceTo>
    <relationshipLabel>W/O/S (RETURN WAREHOUSE ID)</relationshipLabel>
    <relationshipName>WOS</relationshipName>
    <type>Lookup</type>
</CustomField>