force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__ServiceStage__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ServiceStage__c</fullName>
    <description>Unique key within a process, used to identify the service in a process</description>
    <inlineHelpText>Unique key within a process, used to identify the service in a process</inlineHelpText>
    <label>Service Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>