force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__TruckNumberPlate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TruckNumberPlate__c</fullName>
    <label>TRUCK NUMBER PLATE</label>
    <type>TextArea</type>
</CustomField>