force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__VASServiceType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VASServiceType__c</fullName>
    <label>VAS SERVICE TYPE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ValueAddedServiceType</valueSetName>
    </valueSet>
</CustomField>