force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__Warehouse__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WAREHOUSE ID</label>
    <referenceTo>clofor_com_cfs__Facility__c</referenceTo>
    <relationshipLabel>WORK ORDER SERVICE-ORIGIN</relationshipLabel>
    <relationshipName>WorkOrderService</relationshipName>
    <type>Lookup</type>
</CustomField>