force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__WMSBillCreationStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WMSBillCreationStatus__c</fullName>
    <label>WMS Bill Creation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__RecordCreationStatus</valueSetName>
    </valueSet>
</CustomField>