force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/fields/clofor_com_cfs__WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WorkOrder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>WORK ORDER</label>
    <referenceTo>clofor_com_cfs__WorkOrder__c</referenceTo>
    <relationshipLabel>WMS W/O/S</relationshipLabel>
    <relationshipName>WorkOrderService</relationshipName>
    <type>Lookup</type>
</CustomField>