force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/recordTypes/clofor_com_cfs__InboundReceiving.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__InboundReceiving</fullName>
    <active>true</active>
    <description>Receiving for cargo inbound from customer</description>
    <label>Inbound Receiving</label>
</RecordType>