force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/recordTypes/clofor_com_cfs__OutboundDispatch.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__OutboundDispatch</fullName>
    <active>true</active>
    <description>Dispatch for cargo outbound to the customers</description>
    <label>Outbound Dispatch</label>
</RecordType>