force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/recordTypes/clofor_com_cfs__Picking.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Picking</fullName>
    <active>true</active>
    <label>Picking</label>
</RecordType>