force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/recordTypes/clofor_com_cfs__Putaway.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Putaway</fullName>
    <active>true</active>
    <label>Putaway</label>
</RecordType>