force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/recordTypes/clofor_com_cfs__TransferDispatch.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__TransferDispatch</fullName>
    <active>true</active>
    <description>Dispatch for cargo transferred to another location</description>
    <label>Transfer Dispatch</label>
</RecordType>