force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/recordTypes/clofor_com_cfs__TransferReceiving.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__TransferReceiving</fullName>
    <active>true</active>
    <description>Receiving for cargo transferred from another location</description>
    <label>Transfer Receiving</label>
</RecordType>