force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/recordTypes/clofor_com_cfs__ValueAddedService.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ValueAddedService</fullName>
    <active>true</active>
    <label>Value Added Service</label>
</RecordType>