force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/validationRules/clofor_com_cfs__ACTUAL_END_TIME_later_than_START_TIME.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__ACTUAL_END_TIME_later_than_START_TIME</fullName>
    <active>true</active>
    <errorConditionFormula>clofor_com_cfs__ActualEndTime__c &lt;  clofor_com_cfs__ActualStartTime__c</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__ActualEndTime__c</errorDisplayField>
    <errorMessage>ACTUAL END TIME must be later than ACTUAL START TIME.</errorMessage>
</ValidationRule>