force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/validationRules/clofor_com_cfs__FINAL_QUANTITY_LESS_INITIAL_QUANTITY.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__FINAL_QUANTITY_LESS_INITIAL_QUANTITY</fullName>
    <active>false</active>
    <errorConditionFormula>clofor_com_cfs__FinalQuantity__c  &gt;  clofor_com_cfs__InitialQuantity__c</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__FinalQuantity__c</errorDisplayField>
    <errorMessage>Final Quantity must be less than Initial Quantity</errorMessage>
</ValidationRule>