force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/validationRules/clofor_com_cfs__SCHEDULED_END_TIME_later_than_START_TIME.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__SCHEDULED_END_TIME_later_than_START_TIME</fullName>
    <active>true</active>
    <errorConditionFormula>clofor_com_cfs__ScheduledEndTime__c &lt;  clofor_com_cfs__ScheduledStartTime__c</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__ScheduledEndTime__c</errorDisplayField>
    <errorMessage>SCHEDULED END TIME must be later than SCHEDULED START TIME.</errorMessage>
</ValidationRule>