force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__Status__c</columns>
    <columns>clofor_com_cfs__WorkOrder__c</columns>
    <columns>clofor_com_cfs__FinalQuantity__c</columns>
    <columns>clofor_com_cfs__Measurement__c</columns>
    <columns>clofor_com_cfs__GrossWeightKG__c</columns>
    <columns>clofor_com_cfs__Locator__c</columns>
    <columns>clofor_com_cfs__Warehouse__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>