force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/listViews/clofor_com_cfs__TransactionCompleted.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__TransactionCompleted</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__Status__c</columns>
    <columns>clofor_com_cfs__WorkOrder__c</columns>
    <columns>clofor_com_cfs__ActualStartTime__c</columns>
    <columns>clofor_com_cfs__ActualEndTime__c</columns>
    <columns>clofor_com_cfs__Warehouse__c</columns>
    <columns>clofor_com_cfs__Locator__c</columns>
    <columns>clofor_com_cfs__DestinationWarehouse__c</columns>
    <columns>clofor_com_cfs__DestinationLocator__c</columns>
    <columns>clofor_com_cfs__FinalQuantity__c</columns>
    <columns>clofor_com_cfs__TypeUnit__c</columns>
    <columns>clofor_com_cfs__QuantityPerUnit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>2.Transaction Completed</label>
    <language>en_US</language>
</ListView>