force-app/main/default/objects/clofor_com_cfs__WorkOrderService__c/listViews/clofor_com_cfs__WOSPicing.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__WOSPicing</fullName>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__Status__c</columns>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__WorkOrder__c</columns>
    <columns>clofor_com_cfs__GoodsSOID__c</columns>
    <columns>clofor_com_cfs__PlannedQuantity__c</columns>
    <columns>clofor_com_cfs__ScheduledEndTime__c</columns>
    <columns>clofor_com_cfs__ScheduledStartTime__c</columns>
    <columns>clofor_com_cfs__ActualStartTime__c</columns>
    <columns>clofor_com_cfs__ActualEndTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>clofor_com_cfs__WorkOrderService__c.clofor_com_cfs__Picking</value>
    </filters>
    <filters>
        <field>clofor_com_cfs__Status__c</field>
        <operation>equals</operation>
        <value>Created,Planned,Resource Assigned,On Progress,Rescheduled,Others</value>
    </filters>
    <label>W/O/S PICKING</label>
</ListView>